--- a/oyunlar/gta-v.html
+++ b/oyunlar/gta-v.html
@@ -5,92 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="GTA V Legacy & Enhanced Türkçe Yama destek sayfası. Kurulum rehberi ve hata çözümleri.">
     <meta name="keywords" content="GTA V türkçe, GTA 5 türkçe yama, kurulum, enhanced">
-    <meta name="author" content="Türkçe Yama Ekibi">
-    <title>GTA V Legacy & Enhanced - Türkçe Yama Destek</title>
+    <meta name="author" content="0xDeftones">
+    <title>GTA V Legacy & Enhanced - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body class="bg-gray-900 text-gray-100 min-h-screen">
+<body class="min-h-screen">
     <div id="header-placeholder"></div>
 
-    <section class="bg-gradient-to-b from-gray-800 to-gray-900 py-12">
+    <section class="hero-gradient py-6">
         <div class="container mx-auto px-4">
-            <div class="max-w-4xl mx-auto">
-                <a href="../index.html" class="text-blue-400 hover:text-blue-300 text-sm mb-4 inline-block">← Tüm Oyunlar</a>
-                <h1 class="text-3xl md:text-4xl font-bold mb-4">Grand Theft Auto V</h1>
-                <p class="text-gray-400 mb-4">Legacy & Enhanced Türkçe Yama</p>
-                <div class="flex flex-wrap gap-2">
-                    <span class="px-4 py-2 bg-blue-600 rounded-full text-sm font-medium">PC</span>
-                </div>
+            <div class="max-w-5xl mx-auto">
+                <a href="../index.html" class="text-pink-400 hover:text-pink-300 text-sm mb-2 inline-block">← Tüm Oyunlar</a>
+                <h1 class="text-2xl md:text-3xl font-bold mb-1">Grand Theft Auto V</h1>
+                <p class="text-[#b8a3b8] text-sm mb-2">Legacy & Enhanced Türkçe Yama</p>
+                <span class="px-2 py-0.5 platform-pc rounded-full text-sm font-medium">PC</span>
             </div>
         </div>
     </section>
 
-    <section class="py-12">
-        <div class="container mx-auto px-4 max-w-4xl">
-            <div class="bg-yellow-900/30 border border-yellow-600 rounded-xl p-4 mb-8">
-                <p class="text-yellow-400">
-                    ⚠️ <strong>Önemli:</strong> GTA Online'da yama kullanmak hesabınızın banlanmasına neden olabilir. 
-                    Yamayı sadece Story Mode için kullanmanız önerilir.
-                </p>
+    <section class="py-6">
+        <div class="container mx-auto px-4 max-w-5xl">
+            <!-- Online Warning -->
+            <div class="online-warning mb-4 text-sm">
+                <span class="text-red-400 font-medium">🚫 Online Uyarısı:</span> 
+                <span class="text-gray-300">GTA Online metinleri çevrilmemiştir. Online modda yama kullanmanızı önermiyoruz.</span>
             </div>
 
-            <!-- Kurulum -->
-            <div class="bg-gray-800 rounded-xl p-6 mb-8">
-                <h2 class="text-2xl font-bold mb-6 flex items-center gap-3"><span>📥</span> Kurulum</h2>
-                <div class="bg-blue-900/30 border border-blue-600 rounded-lg p-5">
-                    <p class="text-blue-400 mb-3">
-                        📄 <strong>Kurulum talimatları yama arşivinin içindedir.</strong>
-                    </p>
-                    <p class="text-gray-300">
-                        İndirdiğiniz yama arşivini açın ve içindeki <code class="bg-gray-700 px-2 py-1 rounded">README.txt</code> 
-                        veya <code class="bg-gray-700 px-2 py-1 rounded">KURULUM.txt</code> dosyasını okuyun. 
-                        Kurulum adımları orada detaylı şekilde açıklanmıştır.
-                    </p>
-                </div>
-            </div>
-
-            <!-- Bilinen Sorunlar -->
-            <div class="bg-gray-800 rounded-xl p-6 mb-8">
-                <h2 class="text-2xl font-bold mb-6 flex items-center gap-3"><span>⚠️</span> Bilinen Sorunlar ve Çözümleri</h2>
-                <div class="space-y-4">
-                    <div class="bg-gray-900 rounded-lg p-4">
-                        <h3 class="font-bold text-yellow-400 mb-2">Güncelleme sonrası yama silindi</h3>
-                        <p class="text-gray-300">Rockstar güncellemeleri yama dosyalarını silebilir. Her güncellemeden sonra yamayı tekrar kurun.</p>
-                    </div>
-                    <div class="bg-gray-900 rounded-lg p-4">
-                        <h3 class="font-bold text-yellow-400 mb-2">Oyun açılmıyor / Crash</h3>
-                        <p class="text-gray-300">Oyun dosyalarını doğrulayın, yamayı tekrar kurun. Mod kullanıyorsanız geçici olarak kaldırın.</p>
-                    </div>
-                    <div class="bg-gray-900 rounded-lg p-4">
-                        <h3 class="font-bold text-yellow-400 mb-2">Bazı metinler çevrilmemiş</h3>
-                        <p class="text-gray-300">Dinamik içerikler ve bazı DLC metinleri çevrilmemiş olabilir. Güncellemeler için Discord'u takip edin.</p>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                <!-- Kurulum -->
+                <div class="solution-card p-4">
+                    <h3 class="font-semibold flex items-center gap-2 mb-3 text-pink-400">
+                        <span>📥</span> Kurulum
+                    </h3>
+                    <div class="info-box info p-2 text-sm">
+                        <p>📄 İndirdiğiniz yama arşivini açın ve içindeki <code>Beni Oku.txt</code> dosyasını okuyun.</p>
                     </div>
                 </div>
-            </div>
 
-            <!-- SSS -->
-            <div class="bg-gray-800 rounded-xl p-6 mb-8">
-                <h2 class="text-2xl font-bold mb-6 flex items-center gap-3"><span>❓</span> Sık Sorulan Sorular</h2>
-                <div class="space-y-4">
-                    <div class="border-b border-gray-700 pb-4">
-                        <h3 class="font-bold text-white mb-2">Steam, Epic ve Rockstar sürümleri destekleniyor mu?</h3>
-                        <p class="text-gray-400">Evet, tüm PC platformları desteklenmektedir.</p>
-                    </div>
-                    <div class="border-b border-gray-700 pb-4">
-                        <h3 class="font-bold text-white mb-2">Modlarla uyumlu mu?</h3>
-                        <p class="text-gray-400">Çoğu mod ile uyumludur. Önce yamayı, sonra modları kurun.</p>
-                    </div>
-                    <div class="pb-4">
-                        <h3 class="font-bold text-white mb-2">Legacy ve Enhanced farkı nedir?</h3>
-                        <p class="text-gray-400">Enhanced sürüm yeni nesil grafikler içerir. Doğru yamayı seçtiğinizden emin olun.</p>
+                <!-- Bilinen Sorunlar -->
+                <div class="solution-card p-4">
+                    <h3 class="font-semibold flex items-center gap-2 mb-3 text-pink-400">
+                        <span>⚠️</span> Bilinen Sorunlar
+                    </h3>
+                    <div class="space-y-2 text-sm">
+                        <div class="problem-card p-2">
+                            <h4 class="text-yellow-400 font-medium">Güncelleme sonrası yama silindi</h4>
+                            <p class="text-[#b8a3b8]">Her güncellemeden sonra yamayı tekrar kurun.</p>
+                        </div>
+                        <div class="problem-card p-2">
+                            <h4 class="text-yellow-400 font-medium">Oyun açılmıyor / Crash</h4>
+                            <p class="text-[#b8a3b8]">Dosyaları doğrulayın, modları geçici kaldırın.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="bg-blue-900/30 border border-blue-600 rounded-xl p-6 text-center">
-                <p class="text-blue-400 mb-4">Sorununuzu bulamadınız mı?</p>
-                <a href="../genel-cozumler.html" class="inline-block bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-lg font-semibold transition-colors">🔧 Genel Çözümlere Git</a>
+                <!-- SSS -->
+                <div class="solution-card p-4">
+                    <h3 class="font-semibold flex items-center gap-2 mb-3 text-pink-400">
+                        <span>❓</span> Sık Sorulan Sorular
+                    </h3>
+                    <div class="space-y-2 text-sm">
+                        <div class="problem-card p-2">
+                            <h4 class="text-white font-medium">Steam, Epic, Rockstar destekleniyor mu?</h4>
+                            <p class="text-[#b8a3b8]">Evet, tüm PC platformları desteklenir.</p>
+                        </div>
+                        <div class="problem-card p-2">
+                            <h4 class="text-white font-medium">Modlarla uyumlu mu?</h4>
+                            <p class="text-[#b8a3b8]">Evet. Önce yama, sonra modları kurun.</p>
+                        </div>
+                        <div class="problem-card p-2">
+                            <h4 class="text-white font-medium">Legacy ve Enhanced farkı?</h4>
+                            <p class="text-[#b8a3b8]">Enhanced yeni nesil grafikler içerir.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Yardım -->
+                <div class="solution-card p-4">
+                    <h3 class="font-semibold flex items-center gap-2 mb-3 text-pink-400">
+                        <span>💬</span> Yardım
+                    </h3>
+                    <p class="text-[#b8a3b8] text-sm mb-3">Sorununuzu bulamadınız mı?</p>
+                    <div class="flex flex-wrap gap-2">
+                        <a href="../genel-cozumler.html" class="bg-pink-600 hover:bg-pink-700 px-3 py-1.5 rounded text-sm font-medium transition-colors">🔧 Genel Çözümler</a>
+                        <a href="https://discord.com/invite/zJJKfPrWqR" target="_blank" class="discord-btn text-sm py-1.5">Discord</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
