--- a/oyunlar/rdr-goty.html
+++ b/oyunlar/rdr-goty.html
@@ -5,79 +5,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Red Dead Redemption GOTY & Undead Nightmare Türkçe Yama destek sayfası.">
     <meta name="keywords" content="RDR türkçe, Red Dead Redemption türkçe yama, Xenia, Ryujinx">
-    <meta name="author" content="Türkçe Yama Ekibi">
-    <title>Red Dead Redemption GOTY - Türkçe Yama Destek</title>
+    <meta name="author" content="0xDeftones">
+    <title>Red Dead Redemption GOTY - CriminaL277 & 0xDeftones Destek</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body class="bg-gray-900 text-gray-100 min-h-screen">
+<body class="min-h-screen">
     <div id="header-placeholder"></div>
 
-    <section class="bg-gradient-to-b from-gray-800 to-gray-900 py-12">
+    <section class="hero-gradient py-6">
         <div class="container mx-auto px-4">
-            <div class="max-w-4xl mx-auto">
-                <a href="../index.html" class="text-blue-400 hover:text-blue-300 text-sm mb-4 inline-block">← Tüm Oyunlar</a>
-                <h1 class="text-3xl md:text-4xl font-bold mb-4">Red Dead Redemption GOTY & Undead Nightmare</h1>
-                <p class="text-gray-400 mb-4">Türkçe Yama (Emülatör)</p>
-                <div class="flex flex-wrap gap-2">
-                    <span class="px-4 py-2 bg-emerald-600 rounded-full text-sm font-medium">Xenia</span>
-                    <span class="px-4 py-2 bg-emerald-600 rounded-full text-sm font-medium">Ryujinx</span>
-                    <span class="px-4 py-2 bg-emerald-600 rounded-full text-sm font-medium">Yuzu</span>
+            <div class="max-w-5xl mx-auto">
+                <a href="../index.html" class="text-pink-400 hover:text-pink-300 text-sm mb-2 inline-block">← Tüm Oyunlar</a>
+                <h1 class="text-2xl md:text-3xl font-bold mb-1">Red Dead Redemption GOTY & Undead Nightmare</h1>
+                <p class="text-[#b8a3b8] text-sm mb-2">Türkçe Yama (Emülatör)</p>
+                <div class="flex flex-wrap gap-1.5">
+                    <span class="px-2 py-0.5 platform-emulator rounded-full text-sm font-medium">Xenia</span>
+                    <span class="px-2 py-0.5 platform-emulator rounded-full text-sm font-medium">Ryujinx</span>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="py-12">
-        <div class="container mx-auto px-4 max-w-4xl">
-            <div class="bg-blue-900/30 border border-blue-600 rounded-xl p-4 mb-8">
-                <p class="text-blue-400">
-                    ℹ️ <strong>Not:</strong> Bu yama Xbox 360 ve Nintendo Switch sürümleri için emülatörler üzerinde çalışır.
-                </p>
+    <section class="py-6">
+        <div class="container mx-auto px-4 max-w-5xl">
+            <div class="info-box info mb-4 text-sm">
+                <p>ℹ️ Bu yama Xbox 360 ve Nintendo Switch sürümleri için emülatörler üzerinde çalışır.</p>
             </div>
 
-            <div class="bg-gray-800 rounded-xl p-6 mb-8">
-                <h2 class="text-2xl font-bold mb-6 flex items-center gap-3"><span>📥</span> Kurulum</h2>
-                <div class="bg-blue-900/30 border border-blue-600 rounded-lg p-5">
-                    <p class="text-blue-400 mb-3">📄 <strong>Kurulum talimatları yama arşivinin içindedir.</strong></p>
-                    <p class="text-gray-300">
-                        İndirdiğiniz yama arşivini açın ve içindeki <code class="bg-gray-700 px-2 py-1 rounded">README.txt</code> 
-                        veya <code class="bg-gray-700 px-2 py-1 rounded">KURULUM.txt</code> dosyasını okuyun.
-                    </p>
-                </div>
-            </div>
-
-            <div class="bg-gray-800 rounded-xl p-6 mb-8">
-                <h2 class="text-2xl font-bold mb-6 flex items-center gap-3"><span>⚠️</span> Bilinen Sorunlar ve Çözümleri</h2>
-                <div class="space-y-4">
-                    <div class="bg-gray-900 rounded-lg p-4">
-                        <h3 class="font-bold text-yellow-400 mb-2">Xenia'da düşük FPS</h3>
-                        <p class="text-gray-300">Vulkan backend kullanın. GPU ayarlarını kontrol edin.</p>
-                    </div>
-                    <div class="bg-gray-900 rounded-lg p-4">
-                        <h3 class="font-bold text-yellow-400 mb-2">Ryujinx'te shader kasmaları</h3>
-                        <p class="text-gray-300">İlk açılışta normal. Shader cache oluştukça düzelir.</p>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                <!-- Kurulum -->
+                <div class="solution-card p-4">
+                    <h3 class="font-semibold flex items-center gap-2 mb-3 text-pink-400">
+                        <span>📥</span> Kurulum
+                    </h3>
+                    <div class="info-box info p-2 text-sm">
+                        <p>📄 İndirdiğiniz yama arşivini açın ve içindeki <code>Beni Oku.txt</code> dosyasını okuyun.</p>
                     </div>
                 </div>
-            </div>
 
-            <div class="bg-gray-800 rounded-xl p-6 mb-8">
-                <h2 class="text-2xl font-bold mb-6 flex items-center gap-3"><span>❓</span> Sık Sorulan Sorular</h2>
-                <div class="space-y-4">
-                    <div class="border-b border-gray-700 pb-4">
-                        <h3 class="font-bold text-white mb-2">Hangi emülatör daha iyi?</h3>
-                        <p class="text-gray-400">Switch için Ryujinx, Xbox 360 için Xenia Canary önerilir.</p>
-                    </div>
-                    <div class="pb-4">
-                        <h3 class="font-bold text-white mb-2">Minimum sistem gereksinimleri?</h3>
-                        <p class="text-gray-400">En az 16GB RAM ve modern bir GPU gerekir.</p>
+                <!-- Bilinen Sorunlar -->
+                <div class="solution-card p-4">
+                    <h3 class="font-semibold flex items-center gap-2 mb-3 text-pink-400">
+                        <span>⚠️</span> Bilinen Sorunlar
+                    </h3>
+                    <div class="space-y-2 text-sm">
+                        <div class="problem-card p-2">
+                            <h4 class="text-yellow-400 font-medium">Xenia'da düşük FPS</h4>
+                            <p class="text-[#b8a3b8]">Vulkan backend kullanın. GPU ayarlarını kontrol edin.</p>
+                        </div>
+                        <div class="problem-card p-2">
+                            <h4 class="text-yellow-400 font-medium">Ryujinx'te shader kasmaları</h4>
+                            <p class="text-[#b8a3b8]">İlk açılışta normal. Shader cache oluştukça düzelir.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="bg-blue-900/30 border border-blue-600 rounded-xl p-6 text-center">
-                <p class="text-blue-400 mb-4">Sorununuzu bulamadınız mı?</p>
-                <a href="../genel-cozumler.html" class="inline-block bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-lg font-semibold transition-colors">🔧 Genel Çözümlere Git</a>
+                <!-- SSS -->
+                <div class="solution-card p-4">
+                    <h3 class="font-semibold flex items-center gap-2 mb-3 text-pink-400">
+                        <span>❓</span> Sık Sorulan Sorular
+                    </h3>
+                    <div class="space-y-2 text-sm">
+                        <div class="problem-card p-2">
+                            <h4 class="text-white font-medium">Hangi emülatör daha iyi?</h4>
+                            <p class="text-[#b8a3b8]">Switch için Ryujinx, Xbox 360 için Xenia Canary.</p>
+                        </div>
+                        <div class="problem-card p-2">
+                            <h4 class="text-white font-medium">Minimum sistem gereksinimleri?</h4>
+                            <p class="text-[#b8a3b8]">En az 16GB RAM ve modern bir GPU gerekir.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Yardım -->
+                <div class="solution-card p-4">
+                    <h3 class="font-semibold flex items-center gap-2 mb-3 text-pink-400">
+                        <span>💬</span> Yardım
+                    </h3>
+                    <p class="text-[#b8a3b8] text-sm mb-3">Sorununuzu bulamadınız mı?</p>
+                    <div class="flex flex-wrap gap-2">
+                        <a href="../genel-cozumler.html" class="bg-pink-600 hover:bg-pink-700 px-3 py-1.5 rounded text-sm font-medium transition-colors">🔧 Genel Çözümler</a>
+                        <a href="https://discord.com/invite/zJJKfPrWqR" target="_blank" class="discord-btn text-sm py-1.5">Discord</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
