--- a/index.html
+++ b/index.html
@@ -81,6 +81,93 @@
             <p class="text-[#b8a3b8] text-center mb-6 text-sm">Aşağıdaki oyunlar için özel destek sayfalarımız mevcuttur</p>
             
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 max-w-6xl mx-auto">
+                <!-- L.A. Noire -->
+                <a href="oyunlar/la-noire.html" class="game-card">
+                    <img src="images/la-noire.jpg" alt="L.A. Noire" class="game-card-cover">
+                    <div class="game-card-content">
+                        <h3 class="font-semibold text-white">L.A. Noire</h3>
+                        <p class="text-[#b8a3b8]">Türkçe Yama</p>
+                        <div class="flex flex-wrap gap-1.5">
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- Bully -->
+                <a href="oyunlar/bully.html" class="game-card">
+                    <img src="images/bully.jpg" alt="Bully" class="game-card-cover">
+                    <div class="game-card-content">
+                        <h3 class="font-semibold text-white">Bully</h3>
+                        <p class="text-[#b8a3b8]">2025 Türkçe Yama</p>
+                        <div class="flex flex-wrap gap-1.5">
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
+                            <span class="px-2 py-0.5 platform-ps2 rounded-full text-sm">PS2</span>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- GTA Vice City Nextgen -->
+                <a href="oyunlar/gta-vice-city-nextgen.html" class="game-card">
+                    <img src="images/gta-vice-city-nextgen.jpg" alt="GTA Vice City Nextgen" class="game-card-cover">
+                    <div class="game-card-content">
+                        <h3 class="font-semibold text-white">GTA: Vice City Nextgen</h3>
+                        <p class="text-[#b8a3b8]">Nextgen Edition Türkçe Yama</p>
+                        <div class="flex flex-wrap gap-1.5">
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- RDR PC -->
+                <a href="oyunlar/rdr-pc.html" class="game-card">
+                    <img src="images/rdr-pc.jpg" alt="Red Dead Redemption PC" class="game-card-cover">
+                    <div class="game-card-content">
+                        <h3 class="font-semibold text-white">Red Dead Redemption</h3>
+                        <p class="text-[#b8a3b8]">PC Türkçe Yama</p>
+                        <div class="flex flex-wrap gap-1.5">
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- RDR2 Beta -->
+                <a href="oyunlar/rdr2.html" class="game-card">
+                    <img src="images/rdr2.jpg" alt="Red Dead Redemption 2" class="game-card-cover">
+                    <span class="absolute top-3 right-3 badge-beta rounded text-sm font-bold z-10">BETA</span>
+                    <div class="game-card-content">
+                        <h3 class="font-semibold text-white">Red Dead Redemption II</h3>
+                        <p class="text-[#b8a3b8]">2025 Türkçe Yama (Beta)</p>
+                        <div class="flex flex-wrap gap-1.5">
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- Manhunt 2 -->
+                <a href="oyunlar/manhunt-2.html" class="game-card">
+                    <img src="images/manhunt-2.jpg" alt="Manhunt 2" class="game-card-cover">
+                    <div class="game-card-content">
+                        <h3 class="font-semibold text-white">Manhunt 2</h3>
+                        <p class="text-[#b8a3b8]">2024 Türkçe Yama</p>
+                        <div class="flex flex-wrap gap-1.5">
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
+                            <span class="px-2 py-0.5 platform-psp rounded-full text-sm">PSP</span>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- Manhunt -->
+                <a href="oyunlar/manhunt.html" class="game-card">
+                    <img src="images/manhunt.jpg" alt="Manhunt" class="game-card-cover">
+                    <div class="game-card-content">
+                        <h3 class="font-semibold text-white">Manhunt</h3>
+                        <p class="text-[#b8a3b8]">2024 Türkçe Yama</p>
+                        <div class="flex flex-wrap gap-1.5">
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
+                        </div>
+                    </div>
+                </a>
+
                 <!-- GTA V -->
                 <a href="oyunlar/gta-v.html" class="game-card">
                     <img src="images/gta-v.jpg" alt="GTA V" class="game-card-cover">
@@ -93,15 +180,29 @@
                     </div>
                 </a>
 
-                <!-- GTA Trilogy Classic -->
-                <a href="oyunlar/gta-trilogy-classic.html" class="game-card">
-                    <img src="images/gta-trilogy-classic.jpg" alt="GTA Trilogy Classic" class="game-card-cover">
+                <!-- GTA Liberty City Stories -->
+                <a href="oyunlar/gta-liberty-city-stories.html" class="game-card">
+                    <img src="images/gta-liberty-city-stories.jpg" alt="GTA Liberty City Stories" class="game-card-cover">
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">GTA III, Vice City & SA</h3>
-                        <p class="text-[#b8a3b8]">2023 Türkçe Yamaları</p>
+                        <h3 class="font-semibold text-white">GTA: Liberty City Stories</h3>
+                        <p class="text-[#b8a3b8]">2023 Türkçe Yama</p>
                         <div class="flex flex-wrap gap-1.5">
                             <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
                             <span class="px-2 py-0.5 platform-ps2 rounded-full text-sm">PS2</span>
+                            <span class="px-2 py-0.5 platform-psp rounded-full text-sm">PSP</span>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- RDR GOTY -->
+                <a href="oyunlar/rdr-goty.html" class="game-card">
+                    <img src="images/rdr-goty.jpg" alt="Red Dead Redemption GOTY" class="game-card-cover">
+                    <div class="game-card-content">
+                        <h3 class="font-semibold text-white">Red Dead Redemption GOTY</h3>
+                        <p class="text-[#b8a3b8]">& Undead Nightmare Türkçe</p>
+                        <div class="flex flex-wrap gap-1.5">
+                            <span class="px-2 py-0.5 platform-emulator rounded-full text-sm">Xenia</span>
+                            <span class="px-2 py-0.5 platform-emulator rounded-full text-sm">Ryujinx</span>
                         </div>
                     </div>
                 </a>
@@ -131,66 +232,15 @@
                     </div>
                 </a>
 
-                <!-- GTA Liberty City Stories -->
-                <a href="oyunlar/gta-liberty-city-stories.html" class="game-card">
-                    <img src="images/gta-liberty-city-stories.jpg" alt="GTA Liberty City Stories" class="game-card-cover">
+                <!-- GTA Trilogy Classic -->
+                <a href="oyunlar/gta-trilogy-classic.html" class="game-card">
+                    <img src="images/gta-trilogy-classic.jpg" alt="GTA Trilogy Classic" class="game-card-cover">
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">GTA: Liberty City Stories</h3>
-                        <p class="text-[#b8a3b8]">2023 Türkçe Yama</p>
+                        <h3 class="font-semibold text-white">GTA III, Vice City & SA</h3>
+                        <p class="text-[#b8a3b8]">2023 Türkçe Yamaları</p>
                         <div class="flex flex-wrap gap-1.5">
                             <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
                             <span class="px-2 py-0.5 platform-ps2 rounded-full text-sm">PS2</span>
-                            <span class="px-2 py-0.5 platform-psp rounded-full text-sm">PSP</span>
-                        </div>
-                    </div>
-                </a>
-
-                <!-- GTA Vice City Nextgen -->
-                <a href="oyunlar/gta-vice-city-nextgen.html" class="game-card">
-                    <img src="images/gta-vice-city-nextgen.jpg" alt="GTA Vice City Nextgen" class="game-card-cover">
-                    <div class="game-card-content">
-                        <h3 class="font-semibold text-white">GTA: Vice City Nextgen</h3>
-                        <p class="text-[#b8a3b8]">Nextgen Edition Türkçe Yama</p>
-                        <div class="flex flex-wrap gap-1.5">
-                            <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
-                        </div>
-                    </div>
-                </a>
-
-                <!-- RDR2 Beta -->
-                <a href="oyunlar/rdr2.html" class="game-card">
-                    <img src="images/rdr2.jpg" alt="Red Dead Redemption 2" class="game-card-cover">
-                    <span class="absolute top-3 right-3 badge-beta rounded text-sm font-bold z-10">BETA</span>
-                    <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Red Dead Redemption II</h3>
-                        <p class="text-[#b8a3b8]">2025 Türkçe Yama (Beta)</p>
-                        <div class="flex flex-wrap gap-1.5">
-                            <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
-                        </div>
-                    </div>
-                </a>
-
-                <!-- RDR GOTY -->
-                <a href="oyunlar/rdr-goty.html" class="game-card">
-                    <img src="images/rdr-goty.jpg" alt="Red Dead Redemption GOTY" class="game-card-cover">
-                    <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Red Dead Redemption GOTY</h3>
-                        <p class="text-[#b8a3b8]">& Undead Nightmare Türkçe</p>
-                        <div class="flex flex-wrap gap-1.5">
-                            <span class="px-2 py-0.5 platform-emulator rounded-full text-sm">Xenia</span>
-                            <span class="px-2 py-0.5 platform-emulator rounded-full text-sm">Ryujinx</span>
-                        </div>
-                    </div>
-                </a>
-
-                <!-- RDR PC -->
-                <a href="oyunlar/rdr-pc.html" class="game-card">
-                    <img src="images/rdr-pc.jpg" alt="Red Dead Redemption PC" class="game-card-cover">
-                    <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Red Dead Redemption</h3>
-                        <p class="text-[#b8a3b8]">PC Türkçe Yama</p>
-                        <div class="flex flex-wrap gap-1.5">
-                            <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
                         </div>
                     </div>
                 </a>
@@ -203,31 +253,6 @@
                         <p class="text-[#b8a3b8]">Türkçe Yama</p>
                         <div class="flex flex-wrap gap-1.5">
                             <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
-                        </div>
-                    </div>
-                </a>
-
-                <!-- Manhunt -->
-                <a href="oyunlar/manhunt.html" class="game-card">
-                    <img src="images/manhunt.jpg" alt="Manhunt" class="game-card-cover">
-                    <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Manhunt</h3>
-                        <p class="text-[#b8a3b8]">2024 Türkçe Yama</p>
-                        <div class="flex flex-wrap gap-1.5">
-                            <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
-                        </div>
-                    </div>
-                </a>
-
-                <!-- Manhunt 2 -->
-                <a href="oyunlar/manhunt-2.html" class="game-card">
-                    <img src="images/manhunt-2.jpg" alt="Manhunt 2" class="game-card-cover">
-                    <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Manhunt 2</h3>
-                        <p class="text-[#b8a3b8]">2024 Türkçe Yama</p>
-                        <div class="flex flex-wrap gap-1.5">
-                            <span class="px-2 py-0.5 platform-pc rounded-full text-sm">PC</span>
-                            <span class="px-2 py-0.5 platform-psp rounded-full text-sm">PSP</span>
                         </div>
                     </div>
                 </a>
