--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h2 class="text-xl font-bold mb-2 text-center">🎮 Desteklenen Yamalar</h2>
             <p class="text-[#b8a3b8] text-center mb-6 text-sm">Aşağıdaki oyunlar için özel destek sayfalarımız mevcuttur</p>
             
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 max-w-6xl mx-auto">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
                 <!-- L.A. Noire -->
                 <a href="oyunlar/la-noire.html" class="game-card">
                     <img src="images/la-noire.jpg" alt="L.A. Noire" class="game-card-cover">
