--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
                 <!-- L.A. Noire -->
                 <a href="oyunlar/la-noire.html" class="game-card">
-                    <img src="images/la-noire.jpg" alt="L.A. Noire" class="game-card-cover">
+                    <img src="images/la-noire.webp" alt="L.A. Noire" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
@@ -95,7 +95,7 @@
 
                 <!-- Bully -->
                 <a href="oyunlar/bully.html" class="game-card">
-                    <img src="images/bully.jpg" alt="Bully" class="game-card-cover">
+                    <img src="images/bully.webp" alt="Bully" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                         <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
@@ -108,7 +108,7 @@
 
                 <!-- GTA Vice City Nextgen -->
                 <a href="oyunlar/gta-vice-city-nextgen.html" class="game-card">
-                    <img src="images/gta-vice-city-nextgen.jpg" alt="GTA Vice City Nextgen" class="game-card-cover">
+                    <img src="images/gta-vice-city-nextgen.webp" alt="GTA Vice City Nextgen" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
@@ -120,7 +120,7 @@
 
                 <!-- RDR PC -->
                 <a href="oyunlar/rdr-pc.html" class="game-card">
-                    <img src="images/rdr-pc.jpg" alt="Red Dead Redemption PC" class="game-card-cover">
+                    <img src="images/rdr-pc.webp" alt="Red Dead Redemption PC" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
@@ -132,7 +132,7 @@
 
                 <!-- RDR2 Beta -->
                 <a href="oyunlar/rdr2.html" class="game-card">
-                    <img src="images/rdr2.jpg" alt="Red Dead Redemption 2" class="game-card-cover">
+                    <img src="images/rdr2.webp" alt="Red Dead Redemption 2" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
@@ -145,7 +145,7 @@
 
                 <!-- Manhunt 2 -->
                 <a href="oyunlar/manhunt-2.html" class="game-card">
-                    <img src="images/manhunt-2.jpg" alt="Manhunt 2" class="game-card-cover">
+                    <img src="images/manhunt-2.webp" alt="Manhunt 2" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                         <span class="px-2 py-0.5 platform-psp rounded-full text-xs">PSP</span>
@@ -158,7 +158,7 @@
 
                 <!-- Manhunt -->
                 <a href="oyunlar/manhunt.html" class="game-card">
-                    <img src="images/manhunt.jpg" alt="Manhunt" class="game-card-cover">
+                    <img src="images/manhunt.webp" alt="Manhunt" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
@@ -170,7 +170,7 @@
 
                 <!-- GTA V -->
                 <a href="oyunlar/gta-v.html" class="game-card">
-                    <img src="images/gta-v.jpg" alt="GTA V" class="game-card-cover">
+                    <img src="images/gta-v.webp" alt="GTA V" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
@@ -182,7 +182,7 @@
 
                 <!-- GTA Liberty City Stories -->
                 <a href="oyunlar/gta-liberty-city-stories.html" class="game-card">
-                    <img src="images/gta-liberty-city-stories.jpg" alt="GTA Liberty City Stories" class="game-card-cover">
+                    <img src="images/gta-liberty-city-stories.webp" alt="GTA Liberty City Stories" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                         <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
@@ -196,20 +196,20 @@
 
                 <!-- RDR GOTY -->
                 <a href="oyunlar/rdr-goty.html" class="game-card">
-                    <img src="images/rdr-goty.jpg" alt="Red Dead Redemption GOTY" class="game-card-cover">
+                    <img src="images/rdr-goty.webp" alt="Red Dead Redemption GOTY" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-emulator rounded-full text-xs">Xenia</span>
                         <span class="px-2 py-0.5 platform-emulator rounded-full text-xs">Ryujinx</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Red Dead Redemption GOTY</h3>
-                        <p class="text-[#b8a3b8]">& Undead Nightmare Türkçe</p>
+                        <h3 class="font-semibold text-white">Red Dead Redemption GOTY & Undead Nightmare</h3>
+                        <p class="text-[#b8a3b8]">Türkçe Yama</p>
                     </div>
                 </a>
 
                 <!-- GTA Trilogy Definitive -->
                 <a href="oyunlar/gta-trilogy-definitive.html" class="game-card">
-                    <img src="images/gta-trilogy-definitive.jpg" alt="GTA Trilogy Definitive" class="game-card-cover">
+                    <img src="images/gta-trilogy-definitive.webp" alt="GTA Trilogy Definitive" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
@@ -221,7 +221,7 @@
 
                 <!-- GTA Vice City Stories -->
                 <a href="oyunlar/gta-vice-city-stories.html" class="game-card">
-                    <img src="images/gta-vice-city-stories.jpg" alt="GTA Vice City Stories" class="game-card-cover">
+                    <img src="images/gta-vice-city-stories.webp" alt="GTA Vice City Stories" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                         <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
@@ -234,7 +234,7 @@
 
                 <!-- GTA Trilogy Classic -->
                 <a href="oyunlar/gta-trilogy-classic.html" class="game-card">
-                    <img src="images/gta-trilogy-classic.jpg" alt="GTA Trilogy Classic" class="game-card-cover">
+                    <img src="images/gta-trilogy-classic.webp" alt="GTA Trilogy Classic" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                         <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
@@ -247,7 +247,7 @@
 
                 <!-- XIII Classic -->
                 <a href="oyunlar/xiii-classic.html" class="game-card">
-                    <img src="images/xiii-classic.jpg" alt="XIII Classic" class="game-card-cover">
+                    <img src="images/xiii-classic.webp" alt="XIII Classic" class="game-card-cover">
                     <div class="platform-badges">
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
