--- a/oyunlar/gta-vice-city-nextgen.html
+++ b/oyunlar/gta-vice-city-nextgen.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="problem-card p-2">
                             <h4 class="text-white font-medium">Orijinal Vice City gerekli mi?</h4>
-                            <p class="text-[#b8a3b8]">Evet, Nextgen Edition orijinal oyun üzerine kurulur.</p>
+                            <p class="text-[#b8a3b8]">Hayır, Nextgen Edition bağımsız bir oyundur.</p>
                         </div>
                     </div>
                 </div>
