--- a/oyunlar/rdr2.html
+++ b/oyunlar/rdr2.html
@@ -30,14 +30,9 @@
     <section class="py-6">
         <div class="container mx-auto px-4 max-w-5xl">
             <!-- Uyarılar -->
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-3 mb-4">
-                <div class="info-box warning p-2 text-sm">
-                    <span class="text-amber-400">⚠️ Bu yama hala geliştirme aşamasındadır. Bazı metinler eksik olabilir.</span>
-                </div>
-                <div class="online-warning text-sm">
-                    <span class="text-red-400 font-medium">🚫 Online Uyarısı:</span> 
-                    <span class="text-gray-300">RDO metinleri çevrilmemiştir.</span>
-                </div>
+            <div class="online-warning mb-4 text-sm">
+                <span class="text-red-400 font-medium">🚫 Online Uyarısı:</span> 
+                <span class="text-gray-300">RDO metinleri çevrilmemiştir.</span>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -57,10 +52,6 @@
                         <span>⚠️</span> Bilinen Sorunlar
                     </h3>
                     <div class="space-y-2 text-sm">
-                        <div class="problem-card p-2">
-                            <h4 class="text-yellow-400 font-medium">Bazı diyaloglar çevrilmemiş</h4>
-                            <p class="text-[#b8a3b8]">Beta sürümde normal. Çeviri devam ediyor.</p>
-                        </div>
                         <div class="problem-card p-2">
                             <h4 class="text-yellow-400 font-medium">Güncelleme sonrası yama bozuldu</h4>
                             <p class="text-[#b8a3b8]">Güncel beta sürümünü indirip tekrar kurun.</p>
