--- a/oyunlar/la-noire.html
+++ b/oyunlar/la-noire.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="problem-card p-2">
                             <h4 class="text-white font-medium">DLC'ler çevrildi mi?</h4>
-                            <p class="text-[#b8a3b8]">Evet, tüm DLC içerikleri Türkçe'ye çevrilmiştir.</p>
+                            <p class="text-[#b8a3b8]">Evet, tüm DLC içerikleri Türkçeye çevrilmiştir.</p>
                         </div>
                     </div>
                 </div>
