--- a/genel-cozumler.html
+++ b/genel-cozumler.html
@@ -23,6 +23,30 @@
         </div>
     </section>
 
+    <!-- VirusTotal Warning -->
+    <section class="py-4">
+        <div class="container mx-auto px-4 max-w-5xl">
+            <div class="info-box warning p-4">
+                <h3 class="font-semibold text-amber-400 mb-2">⚠️ VirusTotal False-Positive Uyarısı</h3>
+                <p class="text-gray-300 text-sm mb-2">
+                    Yamalarımız VirusTotal'da bazı antivirüs motorları tarafından yanlış pozitif (false-positive) olarak işaretlenebilir. Bu durum oldukça yaygındır ve aşağıdaki nedenlerden kaynaklanır:
+                </p>
+                <ul class="text-gray-300 text-sm mb-3 list-disc list-inside space-y-1">
+                    <li>Yama dosyaları oyunun orijinal dosyalarını değiştirir veya üzerine yazar</li>
+                    <li>Bazı yamalar bellek üzerinde işlem yapar (injection)</li>
+                    <li>Küçük antivirüs firmaları bilinmeyen dosyaları otomatik olarak şüpheli işaretler</li>
+                    <li>Heuristic (davranışsal) taramalar yama araçlarını yanlış algılayabilir</li>
+                </ul>
+                <p class="text-gray-300 text-sm mb-2">
+                    <span class="text-amber-400 font-medium">Önemli:</span> VirusTotal'da 70+ antivirüs motoru bulunur. Bunlardan 2-5 tanesinin uyarı vermesi genellikle false-positive'dir. Kaspersky, ESET, Bitdefender, Microsoft gibi büyük firmaların sonuçlarına dikkat edin.
+                </p>
+                <p class="text-gray-300 text-sm">
+                    Tüm yamalarımız güvenlidir. Şüpheniz varsa Discord sunucumuzdan bize ulaşabilirsiniz.
+                </p>
+            </div>
+        </div>
+    </section>
+
     <!-- Solutions Grid -->
     <section class="py-6">
         <div class="container mx-auto px-4 max-w-5xl">
