--- a/genel-cozumler.html
+++ b/genel-cozumler.html
@@ -114,6 +114,9 @@
                                             <li>Virüs ve tehdit koruması → Ayarları yönet</li>
                                             <li>"Gerçek zamanlı koruma" → Kapalı</li>
                                         </ul>
+                                        <a href="windowsdefender://threatsettings/" class="inline-flex items-center gap-2 mt-2 px-3 py-1.5 bg-blue-600 hover:bg-blue-700 rounded-lg text-sm font-medium transition-colors">
+                                            <span>🔗</span> Virüs Koruma Ayarlarını Aç
+                                        </a>
                                         <div class="mt-2 bg-gray-800/50 border border-dashed border-gray-600 rounded-lg p-4 text-center">
                                             <img src="images/guide/defender-realtime.webp" alt="Windows Defender Gerçek Zamanlı Koruma" class="hidden w-full rounded">
                                             <p class="text-gray-500 text-xs">📷 defender-realtime.webp</p>
@@ -128,6 +131,9 @@
                                             <li>"Bellek bütünlüğü" → Kapalı</li>
                                             <li><span class="text-yellow-400">Bilgisayarı yeniden başlatın</span></li>
                                         </ul>
+                                        <a href="windowsdefender://coreisolation/" class="inline-flex items-center gap-2 mt-2 px-3 py-1.5 bg-blue-600 hover:bg-blue-700 rounded-lg text-sm font-medium transition-colors">
+                                            <span>🔗</span> Çekirdek Yalıtımı'nı Aç
+                                        </a>
                                         <div class="mt-2 bg-gray-800/50 border border-dashed border-gray-600 rounded-lg p-4 text-center">
                                             <img src="images/guide/defender-core-isolation.webp" alt="Windows Defender Çekirdek Yalıtımı" class="hidden w-full rounded">
                                             <p class="text-gray-500 text-xs">📷 defender-core-isolation.webp</p>
@@ -142,6 +148,9 @@
                                             <li>"Kapalı" seçeneğini seçin</li>
                                             <li><span class="text-red-400">⚠️ Kapatıldıktan sonra tekrar açılamaz!</span></li>
                                         </ul>
+                                        <a href="windowsdefender://smartapp/" class="inline-flex items-center gap-2 mt-2 px-3 py-1.5 bg-blue-600 hover:bg-blue-700 rounded-lg text-sm font-medium transition-colors">
+                                            <span>🔗</span> Akıllı Uygulama Denetimi'ni Aç
+                                        </a>
                                         <div class="mt-2 bg-gray-800/50 border border-dashed border-gray-600 rounded-lg p-4 text-center">
                                             <img src="images/guide/defender-smart-app.webp" alt="Windows Defender Akıllı Uygulama Denetimi" class="hidden w-full rounded">
                                             <p class="text-gray-500 text-xs">📷 defender-smart-app.webp</p>
@@ -156,6 +165,9 @@
                                             <li>Klasör ekle → Oyun klasörünü seçin</li>
                                             <li><span class="text-green-400">✅ Böylece antivirüsü kapatmanıza gerek kalmaz</span></li>
                                         </ul>
+                                        <a href="windowsdefender://exclusions/" class="inline-flex items-center gap-2 mt-2 px-3 py-1.5 bg-green-600 hover:bg-green-700 rounded-lg text-sm font-medium transition-colors">
+                                            <span>🔗</span> Dışlama Ayarlarını Aç
+                                        </a>
                                         <div class="mt-2 bg-gray-800/50 border border-dashed border-gray-600 rounded-lg p-4 text-center">
                                             <img src="images/guide/defender-exclusions.webp" alt="Windows Defender Dışlama Ekleme" class="hidden w-full rounded">
                                             <p class="text-gray-500 text-xs">📷 defender-exclusions.webp</p>
